--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="box"> 
+        <div class="title">
+                  <h1>Hello</h1>
+                  <p>Lorem ipsum dolor sit amet consectetur, 
+                      adipisicing elit. Perspiciatis, numquam.</p>
+        </div>
+    </div>
+   
+
 </body>
 </html>
